--- a/style.css
+++ b/style.css
@@ -15,13 +15,14 @@ header{
 }
 .bgimage{
     background-image: url(teatime.jpg);
-    min-height: 100vh;
+    min-width: 100%;
+    min-height: 56vw;
+    background-position: top left 50%;
 }
 .topcontent{
     color: white;
     text-align: center;
-    margin-top: 20%;
-    padding-bottom: auto;
+    margin: 15vw auto auto auto;
 }
 .topcontent h2{
     font-size: 500%;
@@ -39,7 +40,7 @@ header{
     width: 700px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 40px;
+    margin-bottom: 10%;
 }
 .maincontents a {
     color: brown;
