--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 @charset "UTF-8";
 
 html {
-    font-size: 100%;
+    font-size: 62.5%;
 }
 body {
     line-height: 1.7;
+    font-size: 1.6rem;
+    font-size-adjust: none;
 }
 img {
     max-width: 100%;
@@ -33,7 +35,7 @@ header{
     margin: 80px 0;
 }
 .profile h2 {
-    font-size: 250%;
+    font-size: 2.5rem;
     padding: 20px 0;
 }
 .maincontents {
@@ -63,12 +65,11 @@ header{
 }
 .item-big1 {
     grid-column: 2 / 4;
-    padding-top: 8%;
+    margin: 50px 0;
 }
 .item-big2 {
     grid-column: 1 / 3;
-    padding-top: 8%;
-    text-align: right;
+    margin: 50px 0;
 }
 footer {
     color: white;
