--- a/style.css
+++ b/style.css
@@ -78,29 +78,18 @@ header{
     grid-template-columns: 150px auto 150px;
     grid-template-rows: 150px 150px 150px;
 }
-.item img{
+.item-picture img{
     width: 150px;
     height: auto;
 }
 .vivaldi{
     padding: 56px 0;
 }
-.item-big1 {
+.item-big {
     grid-column: 2 / 4;
-    margin: 50px 0;
-}
-.item-big2 {
-    grid-column: 1 / 3;
     margin: 50px 0;
 }
 footer {
     color: white;
     background-image: url(teatime_footer.jpg);
 }
-/*@media screen and (max-width:600px) {
-p {
-    font-size: 2rem;
-}
-ul {
-    font-size: 2rem;
-}   }*/
