--- a/style.scss
+++ b/style.scss
@@ -1,106 +1,235 @@
 @charset "UTF-8";
 $pc_width: 768px;
-@mixin pc {
-    @media screen and (min-width:$pc_width){
+@mixin mb {
+    @media screen and (max-width:$pc_width){
         @content;
     }
 }
 
-html {
-    font-size: 62.5%;
+html,body {
+    height: 100%;
 }
 body {
     line-height: 1.7;
-    font-size: 1.6rem;
-    width: 100%
+    font-size: 16px;
+    min-width: 100%;
+    color: white;
+    background-image: url(images/yunimaspage-2024-bg.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: "Libre Baskerville", "Shippori Mincho", serif;
 }
 img {
     max-width: 100%;
 }
-header {
-    font-size: 0.5em;
+a {
     color: white;
-    font-family: 'Caveat', cursive;
-    @media screen and (min-width:$pc_width) {
-        font-size: 1em;
+    transition: 0.3s;
+    &:hover {
+        opacity: 0.8;
     }
-}
-.bg-img {
-    background-image: url(images/teatime.jpg);
-    min-width: 100vw;
-    height: 57vw;
-    background-position: top left 50%;
-    background-size: cover;
-    @media screen and (min-width:$pc_width){
-        height: 100vh; /* 全画面表示 */ 
-        background-repeat: no-repeat;
-        background-position: center center;
-    }
-}
-.top-container {
-    color: white;
-    text-align: center;
-    margin: 10vw auto auto auto;
-    h1 {
-        font-size: 5rem;
-        font-family: 'Caveat', cursive;
-    }
-    @include pc{
+    &:visited {
         color: white;
-        text-align: center;
-        margin: 30vh auto auto auto;
-        font-size: 2.5rem;
     }
 }
-.profile {
-    text-align: center;
-    margin: 80px 0;
-    h1 {
-        font-size: 2.5rem;
-        padding: 20px 0;
-        @include pc {
-            font-size: 5rem;
-        }
-    }
-}
-
-
-.main-container {
-    width: 100%;
-    @include pc {
-        width: 700px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 10%;
-    }
-    a {
-        color: brown;
-        &:hover {
-            color: rgb(198, 149, 130)
-        }
-    }
-}
-.link {
-    display: grid;
-    gap: 40px;
-    grid-template-columns: 150px auto;
-    grid-template-rows: 150px auto;
-    p {
-        margin: 50px 0;
-    }
-    img {
-        width: 150px;
-        height: auto;
-    }
-    #vertical-center-img {
+.header {
+    font-size: 20px;
+    padding-top: 10px;
+    position: relative;
+    z-index: 1000;
+    .header__nav {
+        justify-content: right;
         display: flex;
-        align-items: center;
+        .header__list {
+            display: flex;
+            list-style: none;
+            .header__item-li {
+                padding-right: 30px;
+                .header__item-link {
+                    text-decoration: none;
+                    transition: 0.3s;
+                    &:hover {
+                        opacity: 0.8;
+                    }
+                }
+            }
+        }
     }
 }
-footer {
+
+.top__wrapper {
+    height: 100vh;
+    position: relative;
+    top: -60px;
+    display: flex;
+    flex-direction: column;
+    bottom: 0;
+    width: 100%;
+    .top__container {
+        display: flex;
+        align-items: flex-end;
+        margin-top: auto;
+        bottom: 0;
+        margin-left: 20px;
+        .top__body {
+            font-size: 90px;
+            line-height: 1.2;
+            .top__calactor-big {
+                font-size: 150px;
+            }
+        }
+    }
+}
+
+.about__container {
+    text-align: center;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    .about__item-title {
+        font-size: 40px;
+        margin-bottom: 30px;
+    }
+    .about__list {
+        text-align: center;
+        font-size: 20px;
+        margin-bottom: 30px;
+        list-style: none;
+        .about__item-li {
+            padding-bottom: 10px;
+        }
+    }
+}
+
+.skills__wrapper {
+    height: 80vh;
+    top: -60px;
+    display: flex;
+    flex-direction: column;
+    bottom: 0;
+    width: 100%;
+    margin-bottom: 100px;
+}
+.skills__item-title {
+    display: flex;
+    align-items: flex-end;
+    justify-content: right;
+    margin-top: auto;
+    bottom: 0;
+    margin-left: 20px;
+    font-size: 70px;
+}
+.skills__list__container {
+    //display: flex;
+    //flex-direction: row;
+    .skills__col-ul {
+        //column-count: 2;
+        display: flex;
+        //flex: 1;
+        padding: 20px;
+        list-style: none;
+        .skills__item-li {
+            break-inside: avoid;
+        }
+    }
+    .skills__list {
+        list-style: none;
+    }
+    .skills__col-li-left {
+        //column-width: 30vw;
+        flex: 1;
+    }
+    .skills__list__col-left {
+        //width: 30vw;
+        .skills__item-li {
+            width: 20vw;
+            height: 20vw;
+            margin-bottom: 20px;
+            .skills__item-link {
+                width: 18vw;
+                height: 18vw;
+            }
+        }
+    }
+    .skills__col-li-right {
+        flex: 3;
+    }
+    .skills__list__col-right {
+        //width: 70vw;
+        //flex: 2;
+        display: flex;
+        flex-direction: column;
+        .skills__list__row {
+            display: flex;
+            padding-bottom: 20px;
+            .skills__item-li {
+                margin-right: 20px;
+            }
+        }
+        .skills__list__row-upper {
+            .skills__item-li {
+                width: 15vw;
+                height: 15vw;
+                .skills__item-link{
+                    width: 13vw;
+                    height: 13vw;
+                }
+            }
+        }
+        .skills__list__row-middle {
+            .skills__item-li {
+                width: 13vw;
+                height: 13vw;
+                .skills__item-link {
+                    width: 11vw;
+                    height: 11vw;
+                }
+            }
+        }
+        .skills__list__row-lower {
+            .skills__item-li {
+                width: 10vw;
+                height: 10vw;
+                .skills__item-link {
+                    width: 8vw;
+                    height: 8vw;
+                }
+            }
+        }
+    }
+    .skills__item-li {
+        background-color: white;
+        border-radius: 10px;
+        .skills__item-link {
+            margin: 1vw;
+            object-fit: contain;
+            object-position: 50% 50%;
+        }
+    }
+}
+
+.links__title {
+    font-size: 90px;
+    margin-bottom: 70px;
+    .links__calactor-big {
+        font-size: 120px;
+    }
+}
+.links__container {
+    text-align: center;
+    padding-bottom: 80px;
+    .links__list {
+        .links__item-li {
+            font-size: 22px;
+            padding-bottom: 20px;
+        }
+    }
+}
+
+.footer {
     color: white;
     background-image: url(images/teatime_footer.jpg);
-    small {
-        margin-left: 10%;
+    .footer__item-copyright {
+        text-align: center;
     }
 }
