--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,7 @@ $pc_width: 768px;
 
 html,body {
     height: 100%;
+    min-height: 100vh;
 }
 body {
     line-height: 1.7;
@@ -83,8 +84,8 @@ a {
         display: flex;
         align-items: flex-end;
         margin-top: auto;
-        bottom: 0;
         margin-left: 20px;
+        bottom: env(safe-area-inset-bottom, 10px);
         .top__body {
             font-size: 90px;
             @include mb {
