--- a/style.scss
+++ b/style.scss
@@ -31,6 +31,10 @@ a {
     &:visited {
         color: white;
     }
+    &:focus {
+        outline: 2px solid white;
+        outline-offset: 3px;
+    }
 }
 .bg {
     position: fixed;
